tests/fixtures/invalid/pow_bytes_bytes_bool.py
# Cannot call pow() with Bytes, Bytes, Bool
x = pow(b"hello", b"hello", True)
